# tkoz-all-v1

./: .clang-tidy  .clangd  .gitignore  .gitignore-templates  CMakeLists.txt  CONTRIBUTING.MD  README.MD  README.md  SETUP.MD  STYLE.MD
_sample/: CMakeLists.txt  README.MD
_sample/_factor_app/: CMakeLists.txt  main.cpp
_sample/_grid_app/: CMakeLists.txt  grid.cpp
_sample/_math_lib/: CMakeLists.txt
_sample/_math_lib/inc/_test/: IntegerMaths.hpp
_sample/_math_lib/source/: IntegerMaths.cpp
_sample/_math_lib/src/: IntegerMaths.cpp
_sample/_math_tests/: CMakeLists.txt  main.cpp
_sample/_template_lib/: CMakeLists.txt
_sample/_template_lib/inc/_test/: Vector2d.hpp
_sample/_template_lib/include/_test/: Vector2d.hpp
_sample/_test_run/: CMakeLists.txt  run.cpp
_test/: CMakeLists.txt  README.MD
_test/_testapp1/: CMakeLists.txt
_test/_testapp1/source/: app1.cpp
_test/_testapp2/: CMakeLists.txt
_test/_testapp2/source/: app2.cpp
_test/_testlib1/: CMakeLists.txt
_test/_testlib1/include/tkoz/_test/: test1.hpp
_test/_testlib1/source/: test1.cpp
_test/_testlib2/: CMakeLists.txt
_test/_testlib2/include/tkoz/_test/: test2.hpp
cmake/: bash_common.sh  run_cmake_build.sh  run_cmake_ctest.sh  run_cmake_debug_build.sh  run_cmake_debug_generate.sh  run_cmake_generate.sh  run_cmake_minsizerel_build.sh  run_cmake_minsizerel_generate.sh  run_cmake_release_build.sh  run_cmake_release_generate.sh  run_cmake_relwithdebinfo_build.sh  run_cmake_relwithdebinfo_generate.sh  tkoz_compiler_check.cmake  tkoz_options_common.cmake
docs/: Doxyfile.in  clang-doc.cmake  doxygen.cmake
ff/: CMakeLists.txt
ff/core/: CMakeLists.txt
ff/core/inc/tkoz/ff/: CMath.hpp  Constants.hpp  Factorial.hpp  Fixed2dRotation.hpp  Number.hpp  NumberString.hpp  Numbers.hpp  PointData.hpp  PointMathBasic.hpp  ScalarError.hpp  Types.hpp
ff/core/inc/tkoz/ff/fpMath/: CMath.hpp  Fixed2dRotation.hpp  Helpers.hpp  Numbers.hpp
ff/core/inc/tkoz/ff/pointMath/: PointMathBasic.hpp  PointNormTags.hpp
ff/core/src/: Numbers.cpp  PointData.cpp  Types.cpp
ff/core/src/fpMath/: CMath.cpp  Fixed2dRotation.cpp  Helpers.cpp  Numbers.cpp
ff/core/tests/: CMath.cpp  Constants.cpp  Factorial.cpp  Fixed2dRotation.cpp  Number.cpp  NumberString.cpp  PointData.cpp  PointMathBasic.cpp  PointNormTags.cpp  ScalarError.cpp  Types.cpp
ff/core/tests/fpMath/: CMath.cpp  Fixed2dRotation.cpp  Helpers.cpp  Numbers.cpp
ff/core/tests/pointMath/: PointMathBasic.cpp  PointNormTags.cpp
ff/json/: CMakeLists.txt
ff/scripts/: numconst.py
ff/test/: CMakeLists.txt
ff/test-runner/: CMakeLists.txt  main.cpp
ff/vars/: CMakeLists.txt
scripts/: README.MD  bash_common.sh  clang_tidy_fast.sh  clang_tidy_full.sh  cmake_build.sh  cmake_clang_doc.sh  cmake_ctest.sh  cmake_doxygen.sh  cmake_generate.sh  cov_cleanup.sh  cov_generate.sh  cpp_check.sh
srtest/: CMakeLists.txt  README.MD
srtest/include/tkoz/: SRTest.hpp  SRTestMain.hpp
