add_library(tkoz-ff-core)
add_library(tkoz-ff-core-tests)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
file(GLOB_RECURSE SOURCES_TESTS CONFIGURE_DEPENDS tests/*.cpp)
target_sources(tkoz-ff-core PRIVATE ${SOURCES})
target_sources(tkoz-ff-core-tests PRIVATE ${SOURCES_TESTS})
target_include_directories(tkoz-ff-core PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/inc")
target_link_libraries(tkoz-ff-core PRIVATE tkoz_options_common)
target_link_libraries(tkoz-ff-core-tests PRIVATE tkoz_options_common tkoz-srtest tkoz-ff-core)
